--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "better-scroll": "^2.0.0",
     "core-js": "^3.6.5",
+    "less-loader": "^10.0.1",
     "mitt": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.10",
